Complete Google auth

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="google-signin-client_id" content="214677055022-m9r7kj1e2tavlkomsiqg2ud2gjcqjhp7.apps.googleusercontent.com">
   <title>Ionic App</title>
 
   <base href="/" />
